[tool.poetry]
name = "ChainExecutor"
version = "0.5.0"
description = ""
authors = ["highlander-spirou <highlandetspirou2812@gmail.com>"]
readme = "README.md"
packages = [{include = "ChainExecutor"}]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^3.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core", "setuptools>=40.8.0"]
build-backend = "poetry.core.masonry.api"
